# Electronics-distribution-network

./: .env.docker.example  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
docs/: app_network_info.md  app_products_info.md  app_users_info.md
fixtures/: addresses_fixture.json  network_fixture.json  products_data.json
network/: admin.py  constants.py  filters.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
network/migrations/: 0001_initial.py  0002_networknode_level.py  0003_addressnode_remove_networknode_city_and_more.py  0004_alter_networknode_address.py  0005_alter_networknode_address.py
nginx/: Dockerfile  nginx.conf
products/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
products/migrations/: 0001_initial.py
users/: admin.py  constants.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_create_employee_group.py
